--- a/assets/style.css
+++ b/assets/style.css
@@ -4,4 +4,4 @@
 @import './span-types-styles.css';
 @import './error.css';
 @import './search-by-type.css';
-@import './help.css'
+@import './help.css';
