--- a/assets/form.css
+++ b/assets/form.css
@@ -1,5 +1,5 @@
 form{
-    width: 30%;
+    width: 35%;
     min-width: 190px;
     margin: 0 auto;
     padding: 1rem 0 1rem 1rem;
@@ -9,6 +9,7 @@ form{
 }
 label{
     color: white;
+    font-family: 'Roboto', sans-serif;
     text-transform: uppercase;
 }
 input{
@@ -17,11 +18,17 @@ input{
     border-radius: 4px;
 }
 [data-search]{
-    width: 90%;
+    width: 95%;
     margin: 0.2rem auto;
     font-size: 1rem;
-    font-family: 'IBM Plex Mono', monospace;
+    font-family: 'Roboto', sans-serif;
+    text-transform: uppercase;
+    background-color: rgba(255, 255, 255, 0.74);
     cursor: pointer;
     border: none;
     border-radius: 4px;
+    transition: 500ms;
+}
+[data-search]:hover{
+    transform: scale(1.02);
 }
