--- a/assets/help.css
+++ b/assets/help.css
@@ -3,7 +3,7 @@
     width: 75px;
     height: 32px;
     text-transform: uppercase;
-    font-family: 'IBM Plex Mono', monospace;
+    font-family: 'Roboto', sans-serif;
     background-color: rgba(255, 255, 255, 0.863);
     border: none;
     border-radius: 4px;
